--- a/delete-account.html
+++ b/delete-account.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delete Account - Vibe Learning</title>
+    <title>Delete Account - DomeLearn</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
@@ -157,7 +157,7 @@
 <body>
     <div class="container">
         <h1>🗑️ Delete Account</h1>
-        <div class="subtitle">Vibe Learning - Account Deletion Request</div>
+        <div class="subtitle">DomeLearn - Account Deletion Request</div>
 
         <div class="warning-box">
             <strong>⚠️ Warning:</strong> Account deletion is permanent and irreversible. All your data will be permanently erased and cannot be recovered.
@@ -180,7 +180,7 @@
             <ol class="steps">
                 <li>Send an email to: <strong>asadrabbani1319@gmail.com</strong></li>
                 <li>Use the subject line: <strong>"Account Deletion Request"</strong></li>
-                <li>Include the email address (Account ID) you used to register with Vibe Learning</li>
+                <li>Include the email address (Account ID) you used to register with DomeLearn</li>
                 <li>We will process your request within <strong>30 days</strong></li>
                 <li>You will receive a confirmation email once deletion is complete</li>
             </ol>
@@ -194,9 +194,9 @@
         <div class="email-template">
 Subject: Account Deletion Request
 
-Dear Vibe Learning Support,
+Dear DomeLearn Support,
 
-I would like to delete my Vibe Learning account and all associated data.
+I would like to delete my DomeLearn account and all associated data.
 
 Account Email: [Enter your email address here]
 
@@ -210,7 +210,7 @@ Best regards,
 
         <div class="info-box">
             <h3>Alternative Contact Methods:</h3>
-            <p><strong>In-App Support:</strong> You can also contact us through the "About" screen within the Vibe Learning app.</p>
+            <p><strong>In-App Support:</strong> You can also contact us through the "About" screen within the DomeLearn app.</p>
             <p><strong>Processing Time:</strong> Account deletion requests are typically processed within 5-7 business days, with a maximum of 30 days as stated in our Privacy Policy.</p>
         </div>
 
@@ -221,7 +221,7 @@ Best regards,
         <hr style="margin: 40px 0; border: none; border-top: 1px solid #dee2e6;">
         
         <p style="text-align: center; color: #7f8c8d; font-size: 14px;">
-            © 2025 Vibe Learning. All rights reserved.
+            © 2025 DomeLearn. All rights reserved.
         </p>
     </div>
 </body>
