--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vibe Learning - Privacy & Legal</title>
+    <title>DomeLearn - Privacy & Legal</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
@@ -107,29 +107,29 @@
 <body>
     <div class="container">
         <div class="logo">📱</div>
-        <h1>Vibe Learning</h1>
+        <h1>DomeLearn</h1>
         <div class="subtitle">Privacy & Legal Information</div>
         
         <div class="description">
-            Welcome to Vibe Learning's privacy and legal information center. Here you can access our privacy policy and account deletion procedures.
+            Welcome to DomeLearn's privacy and legal information center. Here you can access our privacy policy and account deletion procedures.
         </div>
 
         <div class="links-container">
             <a href="privacy-policy.html" class="link-card">
                 <span class="icon">🔒</span>
                 <h3>Privacy Policy</h3>
-                <p>Learn how we collect, use, and protect your personal information while using Vibe Learning.</p>
+                <p>Learn how we collect, use, and protect your personal information while using DomeLearn.</p>
             </a>
 
             <a href="delete-account.html" class="link-card">
                 <span class="icon">🗑️</span>
                 <h3>Delete Account</h3>
-                <p>Request permanent deletion of your Vibe Learning account and all associated data.</p>
+                <p>Request permanent deletion of your DomeLearn account and all associated data.</p>
             </a>
         </div>
 
         <div class="footer">
-            <p><strong>Vibe Learning</strong> - Your personalized learning journey</p>
+            <p><strong>DomeLearn</strong> - Your personalized learning journey</p>
             <p>© 2025 Asad Rabbani. All rights reserved.</p>
         </div>
     </div>
