--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Vibe Learning</title>
+    <title>Privacy Policy - DomeLearn</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
@@ -129,7 +129,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Privacy Policy for Vibe Learning</h1>
+        <h1>Privacy Policy for DomeLearn</h1>
         
         <div class="last-updated">
             <strong>Last Updated:</strong> December 21, 2025<br>
@@ -137,8 +137,8 @@
         </div>
 
         <h2>Introduction</h2>
-        <p>Vibe Learning ("we," "our," or "us") is committed to protecting your privacy and providing transparency about how we collect, use, and safeguard your information. This Privacy Policy explains our practices regarding data collection and use when you use the Vibe Learning mobile application ("the App") - an educational platform for learning any subject through scrollable, bite-sized content.</p>
-        <p><strong>By using Vibe Learning, you agree to the collection and use of information in accordance with this Privacy Policy.</strong></p>
+        <p>DomeLearn ("we," "our," or "us") is committed to protecting your privacy and providing transparency about how we collect, use, and safeguard your information. This Privacy Policy explains our practices regarding data collection and use when you use the DomeLearn mobile application ("the App") - an educational platform for learning any subject through scrollable, bite-sized content.</p>
+        <p><strong>By using DomeLearn, you agree to the collection and use of information in accordance with this Privacy Policy.</strong></p>
 
         <hr>
 
@@ -241,7 +241,7 @@
         <hr>
 
         <h2>3. User Control and Data Management</h2>
-        <p>Vibe Learning gives you full, real-time control over your data:</p>
+        <p>DomeLearn gives you full, real-time control over your data:</p>
 
         <h3>3.1 Content Management Rights</h3>
         <p><strong>Add, Modify, and Delete:</strong></p>
@@ -262,7 +262,7 @@
 
         <h3>3.2 Data Minimization Commitment</h3>
         <ul>
-            <li>We collect only the data necessary to provide the Vibe Learning service</li>
+            <li>We collect only the data necessary to provide the DomeLearn service</li>
             <li>Your learning preferences and progress data are used <strong>exclusively</strong> for your personal educational experience</li>
         </ul>
 
@@ -302,7 +302,7 @@
         </div>
 
         <p><strong>Required Information:</strong><br>
-        Include the email address (Account ID) associated with your Vibe Learning account.</p>
+        Include the email address (Account ID) associated with your DomeLearn account.</p>
 
         <p><strong>What Happens When You Delete Your Account:</strong></p>
         <ul>
@@ -433,7 +433,7 @@
         <hr>
 
         <h2>8. Children's Privacy</h2>
-        <p><strong>Age Requirement:</strong> Vibe Learning is intended for users aged <strong>13 years and older</strong>.</p>
+        <p><strong>Age Requirement:</strong> DomeLearn is intended for users aged <strong>13 years and older</strong>.</p>
 
         <p><strong>COPPA Compliance:</strong></p>
         <ul>
@@ -477,7 +477,7 @@
         <h2>10. International Data Transfers</h2>
         <ul>
             <li>Our servers are located globally through Vercel's edge network</li>
-            <li>If you access Vibe Learning from outside your region, your information may be transferred to, stored, and processed in various locations</li>
+            <li>If you access DomeLearn from outside your region, your information may be transferred to, stored, and processed in various locations</li>
             <li>By using the app, you consent to the transfer of your information to our servers and the application of this Privacy Policy</li>
         </ul>
 
@@ -536,7 +536,7 @@
         </ul>
 
         <h3>12.3 Your Continued Use</h3>
-        <p>Your continued use of Vibe Learning after any changes to this Privacy Policy constitutes your acceptance of the updated terms. If you do not agree with the changes, you should stop using the app and request account deletion.</p>
+        <p>Your continued use of DomeLearn after any changes to this Privacy Policy constitutes your acceptance of the updated terms. If you do not agree with the changes, you should stop using the app and request account deletion.</p>
 
         <hr>
 
@@ -545,7 +545,7 @@
             <p>If you have any questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us:</p>
             <p>
                 <strong>Email:</strong> asadrabbani1319@gmail.com<br>
-                <strong>App:</strong> Vibe Learning<br>
+                <strong>App:</strong> DomeLearn<br>
                 <strong>Developer:</strong> Asad Rabbani<br>
                 <strong>Response Time:</strong> We aim to respond to all inquiries within 5-7 business days
             </p>
@@ -558,7 +558,7 @@
         <hr>
 
         <h2>14. Consent and Acceptance</h2>
-        <p><strong>By downloading, installing, and using Vibe Learning, you acknowledge that:</strong></p>
+        <p><strong>By downloading, installing, and using DomeLearn, you acknowledge that:</strong></p>
         <ul>
             <li>You have read and understood this Privacy Policy</li>
             <li>You consent to the collection, use, and processing of your information as described herein</li>
@@ -572,7 +572,7 @@
         <h2>15. Legal Basis for Processing (GDPR)</h2>
         <p>For users in the EU/EEA, we process your personal information based on the following legal grounds:</p>
         <ul>
-            <li><strong>Contract Performance:</strong> Processing necessary to provide the Vibe Learning service you have requested</li>
+            <li><strong>Contract Performance:</strong> Processing necessary to provide the DomeLearn service you have requested</li>
             <li><strong>Legitimate Interests:</strong> Processing necessary for our legitimate interests (e.g., improving the app, preventing fraud), provided your rights do not override these interests</li>
             <li><strong>Consent:</strong> Processing based on your explicit consent (which you can withdraw at any time)</li>
             <li><strong>Legal Obligations:</strong> Processing necessary to comply with legal requirements</li>
@@ -582,7 +582,7 @@
 
         <div class="section-summary">
             <h2>Summary</h2>
-            <p>Vibe Learning collects your email address, learning progress, quiz scores, and custom-uploaded content to provide a personalized educational experience. We give you full control over your data, including the ability to add, modify, and delete content at any time. We do not sell your information, use it for advertising, or share it without your consent. You can request complete account deletion at any time by contacting us or visiting our <a href="delete-account.html">account deletion page</a>.</p>
+            <p>DomeLearn collects your email address, learning progress, quiz scores, and custom-uploaded content to provide a personalized educational experience. We give you full control over your data, including the ability to add, modify, and delete content at any time. We do not sell your information, use it for advertising, or share it without your consent. You can request complete account deletion at any time by contacting us or visiting our <a href="delete-account.html">account deletion page</a>.</p>
             <p><strong>Your privacy is important to us, and we are committed to protecting it.</strong></p>
         </div>
 
@@ -591,7 +591,7 @@
         </p>
         
         <p style="text-align: center; color: #7f8c8d;">
-            © 2025 Vibe Learning. All rights reserved.
+            © 2025 DomeLearn. All rights reserved.
         </p>
     </div>
 </body>
