--- a/delete-account.html
+++ b/delete-account.html
@@ -186,7 +186,7 @@
             </ol>
         </div>
 
-        <a href="mailto:asadrabbani1319@gmail.com?subject=Account%20Deletion%20Request&body=I%20would%20like%20to%20delete%20my%20Vibe%20Learning%20account.%0A%0AAccount%20Email%3A%20%5BEnter%20your%20email%20here%5D%0A%0AThank%20you." class="cta-button">
+        <a href="mailto:asadrabbani1319@gmail.com?subject=Account%20Deletion%20Request&body=I%20would%20like%20to%20delete%20my%20Dome%20Learn%20account.%0A%0AAccount%20Email%3A%20%5BEnter%20your%20email%20here%5D%0A%0AThank%20you." class="cta-button">
             📧 Send Deletion Request
         </a>
 
